--- a/wisdomCampus/html/checkNotice/selectPeople.html
+++ b/wisdomCampus/html/checkNotice/selectPeople.html
@@ -5,10 +5,10 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="../js/demoCssJs/weui.min.css">
-		<link rel="stylesheet" href="../js/demoCssJs/jquery-weui.css">
-		<link rel="stylesheet" href="../js/demoCssJs/demos.css">
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="../../js/demoCssJs/weui.min.css">
+		<link rel="stylesheet" href="../../js/demoCssJs/jquery-weui.css">
+		<link rel="stylesheet" href="../../js/demoCssJs/demos.css">
 		<style type="text/css">
 			.tableView {
 				/*padding-bottom: 65px;*/
@@ -132,25 +132,25 @@
 				</nav>
 			</template>
 		</div>-->
-		<script src="../js/mui.js"></script>
-		<script src="../js/vue.min.js"></script>
+		<script src="../../js/mui.js"></script>
+		<script src="../../js/vue.min.js"></script>
 		<!--加密-->
-		<script src="../js/lib/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/lib/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/lib/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/lib/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/lib/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/lib/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
 		<!---->
-		<script src='../js/lib/jquery.js'></script>
-		<script src="../js/jquery-weui.min.js"></script>
-		<script src='../js/lib/vconsole/vconsole.min.js'></script>
-		<script src='../js/lib/crypto-js/require.js'></script>
-		<script src='../js/utils/signHmacSHA1.js'></script>
-		<script src="../js/publicProtocol.js"></script>
-		<script src='../js/utils/sortSign.js'></script>
-		<script src="../js/utils/storageKeyName.js"></script>
-		<script src="../js/utils/store.js"></script>
-		<script src="../js/utils/utils.js"></script>
-		<script src="../js/utils/storageutil.js"></script>
+		<script src='../../js/lib/jquery.js'></script>
+		<script src="../../js/jquery-weui.min.js"></script>
+		<script src='../../js/lib/vconsole/vconsole.min.js'></script>
+		<script src='../../js/lib/crypto-js/require.js'></script>
+		<script src='../../js/utils/signHmacSHA1.js'></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src='../../js/utils/sortSign.js'></script>
+		<script src="../../js/utils/storageKeyName.js"></script>
+		<script src="../../js/utils/store.js"></script>
+		<script src="../../js/utils/utils.js"></script>
+		<script src="../../js/utils/storageutil.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			var selectPeopleData = new Vue({
