--- a/wisdomCampus/html/index/login.html
+++ b/wisdomCampus/html/index/login.html
@@ -5,13 +5,13 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<script type="text/javascript" src="../js/mui.min.js"></script>
-		<script type="text/javascript" src="../js/utils/utils.js"></script>
-		<script type="text/javascript" src="../js/utils/storageutil.js"></script>
-		<link rel="stylesheet" href="../js/demoCssJs/weui.min.css">
-		<link rel="stylesheet" href="../js/demoCssJs/jquery-weui.css">
-		<link rel="stylesheet" href="../js/demoCssJs/demos.css">
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<script type="text/javascript" src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/utils/utils.js"></script>
+		<script type="text/javascript" src="../../js/utils/storageutil.js"></script>
+		<link rel="stylesheet" href="../../js/demoCssJs/weui.min.css">
+		<link rel="stylesheet" href="../../js/demoCssJs/jquery-weui.css">
+		<link rel="stylesheet" href="../../js/demoCssJs/demos.css">
 		<script type="text/javascript">
 		</script>
 
@@ -22,13 +22,13 @@
 		<div class="mui-content">
 			<div style="height: 200px;font-size: 25px;color: dodgerblue;padding: 100px 0px;text-align: center;">登录</div>
 			<div class="mui-input-row">
-				<label style="margin-top: -5px;"><image src="../img/login/username.png" style="width: 30px;height: 30px;" /></label>
+				<label style="margin-top: -5px;"><image src="../../img/login/username.png" style="width: 30px;height: 30px;" /></label>
 				<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入用户名">
 			</div>
 			<hr style=" height:1px;border:none;border-top:1px solid dodgerblue;margin: -12px 20px 5px 60px ;" />
 
 			<div class="mui-input-row ">
-				<label><image src="../img/login/password.png" style="width: 30px;height: 30px;" /></label>
+				<label><image src="../../img/login/password.png" style="width: 30px;height: 30px;" /></label>
 				<input id='password' type="password" class="mui-input-clear mui-input " placeholder="请输入密码">
 			</div>
 			<hr style=" height:1px;border:none;border-top:1px solid dodgerblue;margin: -12px 20px 0px 60px ;" />
@@ -39,21 +39,21 @@
 		</div>
 	</body>
 	<!--加密-->
-	<script src="../js/lib/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../js/lib/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../js/lib/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../../js/lib/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../../js/lib/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../../js/lib/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
 	<!---->
-	<script src='../js/lib/vconsole/vconsole.min.js'></script>
-	<script src='../js/lib/crypto-js/require.js'></script>
-	<script src='../js/utils/signHmacSHA1.js'></script>
-	<script src='../js/lib/jquery.js'></script>
-	<script src="../js/publicProtocol.js"></script>
-	<script src='../js/utils/sortSign.js'></script>
-	<script src="../js/utils/myStorage.js"></script>
-	<script src="../js/utils/storageKeyName.js"></script>
-	<script src="../js/jquery-weui.min.js"></script>
-	<script src="../js/utils/store.js" type="text/javascript" charset="utf-8"></script>
+	<script src='../../js/lib/vconsole/vconsole.min.js'></script>
+	<script src='../../js/lib/crypto-js/require.js'></script>
+	<script src='../../js/utils/signHmacSHA1.js'></script>
+	<script src='../../js/lib/jquery.js'></script>
+	<script src="../../js/publicProtocol.js"></script>
+	<script src='../../js/utils/sortSign.js'></script>
+	<script src="../../js/utils/myStorage.js"></script>
+	<script src="../../js/utils/storageKeyName.js"></script>
+	<script src="../../js/jquery-weui.min.js"></script>
+	<script src="../../js/utils/store.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		//		$(function() {
 		//			
