--- a/wisdomCampus/html/checkNotice/new-check.html
+++ b/wisdomCampus/html/checkNotice/new-check.html
@@ -6,11 +6,11 @@
 		<title>新消息</title>
 		<meta name="anthor" content="an" />
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="../css/weui.min.css">
-		<link rel="stylesheet" href="../css/jquery-weui.css">
-		<link rel="stylesheet" href="../css/demos.css">
-		<link rel="stylesheet" href="../css/weui-extra.min.css" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="../../css/weui.min.css">
+		<link rel="stylesheet" href="../../css/jquery-weui.css">
+		<link rel="stylesheet" href="../../css/demos.css">
+		<link rel="stylesheet" href="../../css/weui-extra.min.css" />
 		<style rel="stylesheet">
 			.weui-cell:before {
 				content: " ";
@@ -28,7 +28,6 @@
 				left: 15px;
 				z-index: 2
 			}
-			
 			.mui-title {
 				color: white;
 			}
@@ -50,13 +49,11 @@
 			}
 			
 			.weui-btn_blue {
-				position: relative;
 				background-color: #3C9BFE;
 				color: white;
-				width: 90%;
 				margin-top: 16px;
-				/*margin-left: 10px;
-				margin-right: 10px;*/
+				margin-left: 5%;
+				margin-right: 5%;
 			}
 			
 			.weui-btn_blue:hover {
@@ -69,7 +66,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">新建通知</h1>
+			<h1 class="mui-title">新建审批</h1>
+			<!--<a class="mui-icon mui-pull-right right-cancel">取消</a>-->
 		</header>
 		<div id="message" class="mui-content">
 			<div class="weui-cells" style="margin-top: 0px;">
@@ -87,24 +85,30 @@
 					</div>
 				</div>
 			</div>
+			<!--<div class="weui-cells" style="margin-top: 0px;">
+				<div class="weui-cell">
+					<div class="weui-cell__hd">标题</div>
+					<div class="weui-cell__bd">
+						<input v-model="title" style="border: 0px;margin-bottom: 0px;padding-left: 0px;" type="text" class="weui-input" placeholder="请输入标题" />
+					</div>
+				</div>
+				<div class="weui-cell" style="align-items: flex-start;">
+					<div class="weui-cell__hd">内容</div>
+					<div class="weui-cell__bd">
+						<textarea v-model="content" class="weui-textarea" style="padding: 0;margin-bottom: 0;" placeholder="请输入内容" rows="4"></textarea>
+					</div>
+				</div>
+			</div>-->
 			<div class="weui-cells weui-cells_form" style="margin-top: 0px;">
 				<div class="weui-cell">
 					<div class="weui-cell__bd">
 						<div class="weui-uploader">
 							<div class="weui-uploader__hd">
-								<div style="width: 65%;">
-									<input style="width: 200px;" id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" v-on:change="selectFile($event)"><span style="color: dodgerblue;font-size: 15px;">@上传附件</span>
-								</div>
-								<div style="width: 35%">
-									<div style="width: 30px;"><input v-model="smsSync" type="checkbox" style="font-size: 15px;" /></div>
-
-									<div style="font-size: 15px;margin-left: 20px;margin-top: -25px;width: 100px;">短信同步</div>
-								</div>
+								<input style="width: 100px;" id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" v-on:change="selectFile($event)"><span style="color: dodgerblue;font-size: 15px;">@上传附件</span>
 
 							</div>
 
 						</div>
-
 					</div>
 				</div>
 				<div v-if="uploadedFiles.length>0" class="weui-cell__bd" style="margin-left: 5px;margin-bottom: 5px;">
@@ -115,29 +119,29 @@
 				</div>
 			</div>
 			<div class="weui-cells" style="margin-top: 0px;">
-				<div @click="selectPepole()" class="weui-cell weui-cell_access">
-					<div class="weui-cell__bd">
-						接收人
+				<div class="weui-cell">
+					<div class="weui-cell__hd"><label class="weui-label">审批人</label></div>
+					<div class="weui-cell__bd" style="margin-left: -30px;">
+						<span @click="selectPepole()" style="border: solid 1px #3C9BFE;color: #3C9BFE; padding: 7px 5px 5px 5px;margin-top: 10px;font-size: 11px;">选择审批人</span>
+						<div id="workFlow" :data_id="flowId" onclick="selectWorkFlow(this)" style="border: solid 1px #3C9BFE;border-radius: 15px;color: #3C9BFE; padding: 5px 5px 5px 5px;margin-top: 0px;font-size: 11px;float: right;" v-model="flowName">选择审批流程</div>
 					</div>
-					<div class="weui-cell__ft">
-						{{peopleNum}}
+					<span  style="color:#b7b7b7 ;padding-left: 5px;">></span>
+				</div>
+
+				<div class="weui-cell" style="align-items: flex-start;">
+					<div class="weui-cell__hd" style="margin-right: 18px;">顺序审批人</div>
+					<div class="weui-cell__bd">
+						<ol>
+							<li v-if="workFlow.length>0" v-for="(item,index) in flowMan_arr" style="margin-top: 10px;"><span style="border: solid 1px;padding: 7px 5px 5px;border-width: 0px;">{{item.ManName}}</span>
+								<a><span @click="delPeople(index)" class="mui-icon mui-icon-trash mui-pull-right" style="color: gray;"></span></a>
+							</li>
+
+						</ol>
 					</div>
 				</div>
-				<!--<div class="weui-cell weui-cell_switch">
-					<div class="weui-cell__bd">是否短信同步</div>
-					<div class="weui-cell__ft">
-						<input v-model="smsSync" class="weui-switch" type="checkbox" />
-					</div>
-				</div>-->
 			</div>
-			<div style="margin: 10px;color: gray;">
-				{{'已选('+selectPeople.length+'人）:'}}
-				<!--<span v-for="(people,index) of selectPeople">-->
-					{{showSelectPeople}}
-					<!--{{people.utname}}-->
-				<!--</span>-->
-			</div>
-			<a id="sengMsg" @click.stop="clickSubmitBtn()" class="weui-btn weui-btn_blue" style="height: 45px;padding-top: 0px;">发布</a>
+
+			<a @click="clickSubmitBtn()" class="weui-btn weui-btn_blue">发布</a>
 			<div class="weui-gallery" :style="displayGallery" style="z-index: 99;position:absolute;">
 				<span class="weui-gallery__img" @click="clickGigImg" :style="{backgroundImage:'url('+selectImgPath+')'}"></span>
 				<div class="weui-gallery__opr">
@@ -148,34 +152,41 @@
 			</div>
 		</div>
 		<input id="qnInput" style="display: none;">
-		<script src="../js/weui.min.js"></script>
-		<script src="../js/demoCssJs/jquery-2.1.4.js"></script>
-		<script src="../js/vue.min.js"></script>
-		<script src='../js/lib/vconsole/vconsole.min.js'></script>
-		<script src="../js/demoCssJs/jquery-weui.js"></script>
-		<script src="../js/mui.min.js"></script>
-		<script src="../js/lib/exif/exif.min.js"></script>
-		<script src="../js/utils/compress.js"></script>
-		<script src="../js/utils/utils.js"></script>
-		<script src="../js/utils/cryption.js"></script>
-		<script src="../js/lib/qiniu/qiniu.min.js"></script>
-		<script src="../js/lib/plupload/plupload.full.min.js"></script>
-		<script src="../js/utils/storageutil.js"></script>
-		<script src="../js/utils/cloudutil.js"></script>
-		<script src='../js/utils/store.js'></script>
-		<script src="../js/utils/storageKeyName.js"></script>
-		<script src="../js/publicProtocol.js"></script>
-		<script src='../js/lib/crypto-js/require.js'></script>
-		<script src='../js/utils/signHmacSHA1.js'></script>
+
+		<script src="../../js/demoCssJs/jquery-2.1.4.js"></script>
+		<script src="../../js/vue.min.js"></script>
+		<script src='../../js/lib/vconsole/vconsole.min.js'></script>
+		<script src="../../js/demoCssJs/jquery-weui.js"></script>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/weui.min.js"></script>
+		<script src="../../js/lib/exif/exif.min.js"></script>
+		<script src="../../js/utils/compress.js"></script>
+		<script src="../../js/utils/utils.js"></script>
+		<script src="../../js/utils/cryption.js"></script>
+		<script src="../../js/lib/qiniu/qiniu.min.js"></script>
+		<script src="../../js/lib/plupload/plupload.full.min.js"></script>
+		<script src="../../js/utils/storageutil.js"></script>
+		<script src="../../js/utils/cloudutil.js"></script>
+		<script src='../../js/utils/store.js'></script>
+		<script src="../../js/utils/storageKeyName.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src='../../js/lib/crypto-js/require.js'></script>
+		<script src='../../js/utils/signHmacSHA1.js'></script>
 
 		<script type="text/javascript">
+			getSelWorkFlow();
+			var uptokenData;
+			var qnFileUploader; //七牛上传控件对象
+			initQNUploader();
 			var message = new Vue({
 				el: '#message',
 				data: {
-					showSelectPeople:'',
+					flowName: '',
+					flowId: '',
+					workFlow: [],
+					flowMan_arr: [],
 					title: '',
 					content: '',
-					smsSync: false,
 					displayGallery: {
 						display: 'none'
 					},
@@ -186,13 +197,6 @@
 					selectImgPath: '',
 					uploadedFiles: [],
 					selectPeople: []
-				},
-				computed: {
-					// 计算属性的 getter
-					peopleNum: function() {
-						// `this` 指向 vm 实例
-						return this.selectPeople.length > 0 ? this.selectPeople.length + '人' : '点击选择接收人'
-					}
 				},
 				methods: {
 					selectFile: function(event) { //从手机中选择图片后到界面的回调
@@ -206,7 +210,6 @@
 						}
 					},
 					clickImg: function(index) { //点击列表中的附件，给别的地方赋值
-						console.log(message.uploadedFiles[index].ImgUrl)
 						message.selectIndex = index;
 						message.selectImgPath = message.uploadedFiles[index].ImgUrl;
 						message.displayGallery = {
@@ -232,22 +235,21 @@
 						});
 					},
 					clickSubmitBtn: function() {
-						$('#sengMsg').attr('disabled',"true");
-						addNotice();
+						addAffairApply()
+
+					},
+					delPeople: function(index) {
+						message.flowMan_arr.splice(index, 1);
 					},
 					selectPepole: function() {
+
 						var data = {
-							flag: 1, //1 通知公告
-							selectPeople: message.selectPeople
+							flag: 2 //事务及文件
 						}
-						console.log(JSON.stringify(data));
 						utils.mOpenWithData("selectPeople.html", data)
 					}
 				}
 			})
-			var uptokenData;
-			var qnFileUploader; //七牛上传控件对象
-			initQNUploader();
 
 			//从相册中选择照片后，上传
 			//index--从相册选择照片回调里面，照片的索引，files--选择的照片信息，filesSum--选择照片之前，现存的照片张数
@@ -295,6 +297,7 @@
 							}
 							$('#uploaderInput').val('');
 							$.toast("请选择png,jpg,jpeg类型的图片", "cancel");
+
 						}
 					}
 				}
@@ -417,7 +420,7 @@
 				});
 				return upToken;
 			}
-			var addNotice = function() {
+			var addAffairApply = function() {
 				if(message.title.trim().length == 0 || message.content.trim().length == 0) {
 					$.toast("请填写具体内容后再发布", "cancel");
 					return;
@@ -439,10 +442,7 @@
 
 						for(var i = 0; i < message.uploadedFiles.length; i++) {
 							var tempValue = message.uploadedFiles[i];
-//							console.log('tempValue:'+JSON.stringify(tempValue));
-							var tempName = tempValue.NewName+'('+cloudutil.transformSize(tempValue.FileSize)+')';
-//							console.log('tempName:'+tempName);
-							nameArr.push(tempName);
+							nameArr.push(tempValue.NewName);
 							addrArr.push(tempValue.ImgUrl);
 						}
 						var noticEncName = nameArr.join("|")
@@ -450,36 +450,35 @@
 						var smsSync = message.smsSync == true ? 1 : 0
 
 						var personal = store.get(window.storageKeyName.PERSONALINFO);
-						var selectPeople_arr = message.selectPeople;
 						var ids = [];
 						var codes = [];
 						var names = [];
-						for(var i = 0; i < selectPeople_arr.length; i++) {
-							var model = selectPeople_arr[i];
-							ids.push(model.utid)
+						for(var i = 0; i < message.flowMan_arr.length; i++) {
+							var model = message.flowMan_arr[i];
+							ids.push(model.ManId)
 							codes.push('""')
-							names.push('"' + model.utname + '"')
+							names.push('"' + model.ManName + '"')
 						}
 						if(ids.length == 0) {
 							$.toast("请选择接收人", "cancel");
 							return;
 						}
 						$.showLoading('加载中...');
+
 						var tempData = {
 							schoolId: storageKeyName.SCHOOLID, //学校ID
-							noticeTitle: message.title, //标题
-							noticeContent: message.content, //内容
-							noticEncName: noticEncName, //附件名称
-							noticeEncAddr: noticeEncAddr, //附件地址
-							smsSync: smsSync, //是否短信同步
-							sendManId: personal.utid, //发布人ID
-							sendManCode: personal.uid, //发布人账号
-							sendManName: personal.utname, //发布人姓名
-							receiveManIds: arrayToStr(ids), //接收人人ID
-							receiveManCodes: arrayToStr(codes), //接收人账号
-							receiveManNames: arrayToStr(names) //接收人姓名
+							applyTitle: message.title, //标题
+							applyContent: message.content, //内容
+							applyEncName: noticEncName, //附件名称
+							applyEncAddr: noticeEncAddr, //附件地址
+							applyManId: personal.utid, //发布人ID
+							applyManCode: personal.uid, //发布人账号
+							applyManName: personal.utname, //发布人姓名
+							approveManIds: arrayToStr(ids), //接收人人ID
+							approveManCodes: arrayToStr(codes), //接收人账号
+							approveManNames: arrayToStr(names) //接收人姓名
 						}
-						addNoticePro(tempData, function function_name(data) {
+						addAffairApplyPro(tempData, function function_name(data) {
 							$.hideLoading();
 							console.log(JSON.stringify(data))
 							if(data.RspCode == 0) {
@@ -487,21 +486,86 @@
 								mui.toast("发布成功")
 								mui.back();
 							} else {
-								mui.toast(data.RspTxt)
+
 							}
 						});
 					}
 				}
 			}
+
+			function getSelWorkFlow() {
+				var personal = store.get(window.storageKeyName.PERSONALINFO);
+
+				var tempData = {
+					schoolId: storageKeyName.SCHOOLID, //学校ID
+
+				}
+				getSelWorkFlowPro(tempData, function function_name(data) {
+					console.log(JSON.stringify(data))
+					if(data.RspCode == 0) {
+						message.workFlow = data.RspData.Data
+						for(var i = 0; i < message.workFlow.length; i++) {
+
+							var model = message.workFlow[i]
+							model.label = model.FlowName;
+							model.value = model.WorkFlowId;
+						}
+					} else {
+
+					}
+				});
+			}
+
+			function getWorkFlowListById(workFlowId) {
+
+				var tempData = {
+					workFlowId: workFlowId, //学校ID
+
+				}
+				getWorkFlowListByIdPro(tempData, function function_name(data) {
+					console.log(JSON.stringify(data))
+					if(data.RspCode == 0) {
+						message.flowMan_arr = message.flowMan_arr.concat(data.RspData.Data);
+
+					} else {
+
+					}
+				});
+			}
+
+			function selectWorkFlow(input_item) {
+				document.activeElement.blur();
+				var self = input_item;
+				//		if(message.workFlow==undefined||message.workFlow.length==0){
+				//			alert("暂无部门")
+				//		}
+
+				weui.picker(message.workFlow, {
+					onChange: function(result) {
+						//						console.log(result);
+					},
+					onConfirm: function(result) {
+						//						document.getElementById("workFlow").value = result[0].label;
+						//						document.getElementById("workFlow").data_id = result[0].value;
+						message.flowName = result[0].label;
+						message.flowId = result[0].value;
+						getWorkFlowListById(result[0].value);
+					}
+				});
+			}
 			window.addEventListener('selectPeople', function(data) {
 				console.log("data" + JSON.stringify(data.detail.peopleArray))
 				message.selectPeople = data.detail.peopleArray;
-				var tempPeople = [];
-				for (var i = 0; i < message.selectPeople.length; i++) {
-					var tempModel = message.selectPeople[i];
-					tempPeople.push(tempModel.utname);
+				var tempArr = [];
+				for(var i = 0; i < message.selectPeople.length; i++) {
+					var model = message.selectPeople[i]
+					var tempData = {
+						ManName: model.utname,
+						ManId: model.utid,
+					}
+					tempArr.push(tempData)
 				}
-				message.showSelectPeople = tempPeople.join(',');
+				message.flowMan_arr = message.flowMan_arr.concat(tempArr);
 			});
 			//判断是否输入了值
 			var checkInput = function(text) {
