--- a/wisdomCampus/html/index/ReadQRCode.html
+++ b/wisdomCampus/html/index/ReadQRCode.html
@@ -5,9 +5,9 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../../css/utils/common.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/mui.min.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/utils/iconfont.css"/>
+		<link href="../../../css/utils/common.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="../../css/mui.min.css"/>
+		<link rel="stylesheet" type="text/css" href="../../css/utils/iconfont.css"/>
 	</head>
 
 	<body>
@@ -18,8 +18,8 @@
 
 		<div id="bcid" style="position: absolute;top: 64px;left: -10%;width: 120%;height: 100%;"></div>
 
-		<script src="../js/mui.min.js"></script>
-		<script src="../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 
 		<script type="text/javascript">
 			mui.init({
